--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "keen-slider": "^6.8.6",
+
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
